# MinesweeperGame-CPP

./: CMakeLists.txt  Game.cpp  Game.h  README.md  block.cpp  block.h  dll_export.h  game_api.cpp  main.cpp
MinesweeperGame-CPP/: CMakeLists.txt  Game.cpp  Game.h  LICENSE  block.cpp  block.h  main.cpp  test_main.cpp
Minesweeper_UI/: README.md  pubspec.yaml  rainbow.css
Minesweeper_UI/android/app/: build.gradle.kts
Minesweeper_UI/android/app/src/main/: AndroidManifest.xml
Minesweeper_UI/android/app/src/main/kotlin/com/example/minesweeper_ui/: MainActivity.kt
Minesweeper_UI/ios/Runner/: Info.plist
Minesweeper_UI/ios/Runner.xcodeproj/: project.pbxproj
Minesweeper_UI/lib/: game_service.dart  main.dart  minesweeper_api.dart  tile_widget.dart
Minesweeper_UI/lib/core/theme/: app_colors.dart  app_theme.dart  theme_provider.dart
Minesweeper_UI/lib/models/: tile_state.dart
Minesweeper_UI/lib/pages/: game_page.dart
Minesweeper_UI/lib/services/: game_service.dart
Minesweeper_UI/lib/widgets/: game_board.dart  tile_widget.dart
Minesweeper_UI/linux/: CMakeLists.txt
Minesweeper_UI/linux/runner/: my_application.cc
Minesweeper_UI/macos/Runner.xcodeproj/: project.pbxproj
Minesweeper_UI/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Minesweeper_UI/macos/Runner/Configs/: AppInfo.xcconfig
Minesweeper_UI/src/ffi/: game_api.h
Minesweeper_UI/test/: widget_test.dart
Minesweeper_UI/web/: index.html  manifest.json
Minesweeper_UI/windows/: CMakeLists.txt
Minesweeper_UI/windows/runner/: Runner.rc  main.cpp
